- Added derived version of the project and solution classes to simplify the setup. - Fixed generated project properties cannot be viewed in Visual Studio. - Added utility methods.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 # by default, ignore all solution and projects
 *.sln
 *.csproj
+/deploy
 # but negate for the following, mandatorily versionned
 !Sharpmake/Sharpmake.csproj
 !Sharpmake.Application/Sharpmake.Application.csproj
